--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,39 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Firefox Sync</string>
-  <string name="title_connect">Connect to Sync</string>
-  <string name="title_pair">Pair a Device</string>
+  <string name="sync_app_name">Firefox Sync</string>
+  <string name="sync_title_connect">Connect to Sync</string>
+  <string name="sync_title_pair">Pair a Device</string>
 
   <!-- JPAKE Key Screen -->
-  <string name="subtitle_connect">From a Firefox Sync-connected computer, go to Sync options and select "Add a device"</string>
-  <string name="subtitle_pair">From the device to be paired, go to Sync options and select "Pair a device"</string>
-  <string name="pin_default">...\n...\n...\n</string>
-  <string name="link_show"><a href="https://support.mozilla.com/en-US/kb/add-a-device-to-firefox-sync">Show me how</a></string>
-  <string name="link_nodevice"><a href="#">I\'m not near my computer…</a></string>
+  <string name="sync_subtitle_connect">From a Firefox Sync-connected computer, go to Sync options and select "Add a device"</string>
+  <string name="sync_subtitle_pair">From the device to be paired, go to Sync options and select "Pair a device"</string>
+  <string name="sync_pin_default">...\n...\n...\n</string>
+  <string name="sync_link_show"><a href="https://support.mozilla.com/en-US/kb/add-a-device-to-firefox-sync">Show me how</a></string>
+  <string name="sync_link_nodevice"><a href="#">I\'m not near my computer…</a></string>
 
   <!-- Account Login Screen -->
-  <string name="subtitle_account">Enter your Firefox Sync account information</string>
-  <string name="input_username">Account Name</string>
-  <string name="input_password">Password</string>
-  <string name="input_key">Recovery Key</string>
-  <string name="checkbox_server">Use custom server</string>
-  <string name="input_server">Server URL</string>
+  <string name="sync_subtitle_account">Enter your Firefox Sync account information</string>
+  <string name="sync_input_username">Account Name</string>
+  <string name="sync_input_password">Password</string>
+  <string name="sync_input_key">Recovery Key</string>
+  <string name="sync_checkbox_server">Use custom server</string>
+  <string name="sync_input_server">Server URL</string>
   
   <!-- Setup Fail -->
-  <string name="title_fail">Cannot Set Up Sync</string>
-  <string name="subtitle_fail">Firefox Sync could not connect to the server. Would you like to try again?</string>
-  <string name="button_tryagain">Try again</string>
-  <string name="button_manual">Manual Setup</string>
+  <string name="sync_title_fail">Cannot Set Up Sync</string>
+  <string name="sync_subtitle_fail">Firefox Sync could not connect to the server. Would you like to try again?</string>
+  <string name="sync_button_tryagain">Try again</string>
+  <string name="sync_button_manual">Manual Setup</string>
   
   <!-- Setup Success -->
-  <string name="title_success">Setup Complete</string>
-  <string name="subtitle_success">Your data is now being encrypted and synchronized in the background.</string>
-  <string name="settings">Settings</string>
+  <string name="sync_title_success">Setup Complete</string>
+  <string name="sync_subtitle_success">Your data is now being encrypted and synchronized in the background.</string>
+  <string name="sync_settings">Settings</string>
   
   <!-- Common text -->
-  <string name="button_cancel">Cancel</string>
-  <string name="button_connect">Connect</string>
+  <string name="sync_button_cancel">Cancel</string>
+  <string name="sync_button_connect">Connect</string>
   
   <!-- Account strings -->
-  <string name="account_label">Firefox Sync</string>
+  <string name="sync_account_label">Firefox Sync</string>
 </resources>
