--- a/test/res/values/strings.xml
+++ b/test/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <string name="hello">Hello World!</string>
-    <string name="app_name">Android-sync-testTest</string>
+    <string name="app_name">Firefox Sync Tests</string>
 
 </resources>
