--- a/test/res/values/strings.xml
+++ b/test/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World!</string>
-    <string name="app_name">Firefox Sync Tests</string>
+    <string name="app_name">Gecko Background Tests</string>
 
 </resources>
